--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">IOC</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
