--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="close">close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="spReason_items">
+        <item>Lloji i Faktures</item>
+        <item>Karburant</item>
+        <item>Ushqim</item>
+        <item>Te tjera</item>
+    </string-array>
+    
 
 </resources>
