--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">IOC</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="checkbox">com.fiek.projektiioc.checkbox</string>
+    <string name="loginemail">com.fiek.projektiioc.loginemail</string>
+    <string name="loginpassword">com.fiek.projektiioc.loginpassword</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="spReason_items">
